<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.MainActivity">

    <ImageView android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:background="@mipmap/main"
               android:scaleType="fitXY"/>
    <!--<View android:id="@+id/vv"-->
          <!--android:layout_width="match_parent"-->
          <!--android:layout_height="1dp"-->
          <!--android:layout_centerInParent="true">-->

    <!--</View>-->
    <Button android:id="@+id/bt_set_service"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="0dp"
            android:text="開"
            android:background="@drawable/bg_btn_on"
            android:textSize="50dp"
            android:textColor="@color/white"/>
    <TextView android:id="@+id/tv_show_status"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_below="@+id/bt_set_service"
              android:layout_centerHorizontal="true"
              android:gravity="center"
              android:text="@string/app_is_running"
              android:textColor="@color/white"
              android:textSize="18sp"/>
    <ImageView android:id="@+id/im_settings"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_alignParentRight="true"
               android:layout_marginRight="20dp"
               android:layout_marginTop="40dp"
               android:background="@mipmap/icon_setting"/>
    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_centerHorizontal="true"
                  android:layout_marginTop="60dp"
                  android:orientation="vertical">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/history"
                  android:textColor="@color/color_gold1"
                  android:textSize="22sp"/>

        <LinearLayout android:layout_width="wrap_content"
                      android:layout_marginTop="10dp"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/all_times"
                      android:textColor="@color/color_gold2"/>
            <TextView android:layout_width="wrap_content"
                      android:id="@+id/tv_times"
                      android:layout_height="wrap_content"
                      android:text="0"
                      android:textColor="@color/white"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/ge"
                      android:textColor="@color/color_gold2"/>
        </LinearLayout>


        <LinearLayout android:layout_width="wrap_content"
                      android:layout_marginTop="10dp"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/all_money"
                      android:textColor="@color/color_gold2"/>
            <TextView android:layout_width="wrap_content"
                      android:id="@+id/tv_moneys"
                      android:layout_height="wrap_content"
                      android:text="0"
                      android:textColor="@color/white"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/yuan"
                      android:textColor="@color/color_gold2"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
